# mcp-knowledge-base

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md
infra/: cognito.yaml  gateway.yaml  samconfig.example.toml  targets.yaml  template.yaml
infra/functions/search_lessons/: app.py
infra/functions/sync_lessons/: app.py
infra/functions/write_lesson/: app.py
infra/layers/common/python/: kb_common.py
server/: pyproject.toml
server/src/mcp_kb/: cloud_client.py  config.py  local_store.py  server.py
server/tests/: conftest.py  test_cloud_client.py  test_local_store.py  test_mcp_protocol.py  test_server.py
