[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-kb"
version = "0.1.0"
description = "MCP server for storing and retrieving lessons learned"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "chromadb",
    "httpx",
    "boto3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "boto3-stubs[bedrock-runtime]",
]

[project.scripts]
mcp-kb = "mcp_kb.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: MCP protocol integration tests"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E741"]
per-file-ignores = {"src/mcp_kb/__init__.py" = ["F401"], "src/mcp_kb/server.py" = ["E501"]}

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["no-any-return"]
